k8s/network-policy-allow-from-specific-pod-and-external-traffic/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: allow
  labels:
    name: allow
spec:
  containers:
    - name: curl
      image: curlimages/curl
      command: ["tail", "-f", "/dev/null"]
  terminationGracePeriodSeconds: 1

---
apiVersion: v1
kind: Pod
metadata:
  name: deny
  labels:
    name: deny
spec:
  containers:
    - name: curl
      image: curlimages/curl
      command: ["tail", "-f", "/dev/null"]
  terminationGracePeriodSeconds: 1

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  selector:
    name: nginx
  ports:
    - port: 8000
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-external
spec:
  type: LoadBalancer
  selector:
    name: nginx
  ports:
    - port: 8001
      targetPort: 80
