k8s/network-policy-allow-from-specific-pod-and-external-traffic/allow-external-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress
spec:
  podSelector:
    matchLabels:
      name: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: allow
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 80
